--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
             type="text/css"
         />
-        <script defer src="../JS/texto.js"></script>
+        <script defer src="/src/texto.js"></script>
         <title>Ben 10 Game</title>
     </head>
     <body>
