--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- centro -->
         <h1 class="titulo upper">ben 10 game</h1>
 
-        <a class="linkplay" href="http://127.0.0.1:5501/HTML/load.html"
+        <a class="linkplay" href="load.html"
             ><button title="Voltar ao menu!" type="button" class="btn3">
                 <p class="upper">m e n u</p>
             </button></a
