--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                                 <div class="slide">
                                     <a
-                                        href="http://localhost:5173/game.html?personagem=ben"
+                                        href="https://gameben10byrods.netlify.app?personagem=ben"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/ben10.jpg"
@@ -87,7 +87,7 @@
 
                                 <div class="slide">
                                     <a
-                                        href="http://localhost:5173/game.html?personagem=gwen"
+                                        href="https://gameben10byrods.netlify.app/?personagem=gwen"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/gwen.jpg"
