--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
 
                 <!-- Botão Play-->
-                <a class="linkplay" href="game.html"
+                <a class="linkplay" href="?personagem=fantasmatico"
                     ><button title="Jogar agora!" type="button" class="btn2">
                         <p class="upper">play</p>
                     </button></a
