--- a/game.html
+++ b/game.html
@@ -13,6 +13,11 @@
             type="text/css"
         />
         <link href="/CSS/game.css" rel="stylesheet" type="text/css" />
+        <link
+            rel="shortcut icon"
+            type="image/x-icon"
+            href="/ASSETS/img/omnitrix_ico.ico"
+        />
         <title>Ben 10 Game</title>
     </head>
     <body>
