--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             rel="stylesheet"
             type="text/css"
         />
-
+        <link
+            rel="shortcut icon"
+            type="image/x-icon"
+            href="/ASSETS/img/omnitrix_ico.ico"
+        />
         <title>Ben 10 by Rodrigo</title>
     </head>
     <body>
@@ -76,8 +80,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://gameben10byrods.netlify.app?personagem=ben"
+                                    <a href="game.html?personagem=ben"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/ben10.jpg"
@@ -86,8 +89,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://gameben10byrods.netlify.app/?personagem=gwen"
+                                    <a href="game.html?personagem=gwen"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/gwen.jpg"
@@ -96,8 +98,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=kevin"
+                                    <a href="game.html?personagem=kevin"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/kevin.png"
@@ -106,8 +107,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=chama"
+                                    <a href="game.html?personagem=chama"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/chama.png"
@@ -116,8 +116,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=quatrobracos"
+                                    <a href="game.html?personagem=quatrobracos"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/quatrobracos.png"
@@ -126,8 +125,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=xlr8"
+                                    <a href="game.html?personagem=xlr8"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/xlr8.png"
@@ -136,8 +134,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=diamante"
+                                    <a href="game.html?personagem=diamante"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/diamante.png"
@@ -146,8 +143,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <a
-                                        href="https://ben10byrods.netlify.app/?personagem=fantasmatico"
+                                    <a href="game.html?personagem=fantasmatico"
                                         ><img
                                             class="imagestyle"
                                             src="/ASSETS/img/fantasmatico.png"
