--- a/game.html
+++ b/game.html
@@ -18,6 +18,7 @@
             type="image/x-icon"
             href="/ASSETS/img/omnitrix_ico.ico"
         />
+        <script defer src="../JS/texto.js"></script>
         <title>Ben 10 Game</title>
     </head>
     <body>
